Stopped overflow, made it the whole screen

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 body{
   margin: 0;
+  overflow: hidden;
 }
 
 .editorContainer{
@@ -82,6 +83,6 @@ body{
 
 
 main{
-  width: 99.2vw;
+  width: 100vw;
   display: flex;
 }
